deploy/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: channel-manager-frontend-service-web
  namespace: channel-manager-frontend
spec:
  selector:
    app: channel-manager-frontend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
