deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: channel-manager-frontend-service-service
  namespace: channel-manager-frontend
spec:
  selector:
    app: channel-manager-frontend-service-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
